--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,24 @@ body{
   margin:0;
   padding:0;
 }
+.tops{
+  margin:36px;
+}
 .carry{
   border:1px solid #00012d;
   width:420px;
   height:600px;
-
+}
+.meme{
+  width:200px;
+  height:200px;
+  border:2px solid orange;
+  margin-left:auto;
+  margin-right:auto;
+  border-radius:100px;
+  margin-top:22px;
+  background-image:url("../images/dave.jpg");
+  background-repeat:no-repeat;
+  background-position:center;
+  background-size:cover;
 }
