--- a/css/styles.css
+++ b/css/styles.css
@@ -6,25 +6,80 @@
 body{
   margin:0;
   padding:0;
+  background-image: url("../images/code.jpg");
+  background-repeat:no-repeat;
+  background-size: cover;
+  background-position:center center;
+  background-attachment: fixed;
+}
+h4, h3, h2, p{
+  color:#ffffff;
+}
+h3{
+  margin-bottom:22px;
+}
+p{
+  font-size:18px;
 }
 .tops{
   margin:36px;
+  color:#000;
 }
 .carry{
-  border:1px solid #00012d;
-  width:420px;
-  height:600px;
+  border:none;
+  width:460px;
+  height:840px;
+  background-color:#000;
+  opacity:0.9;
+  border-radius:4px;
 }
 .meme{
   width:200px;
   height:200px;
-  border:2px solid orange;
+  border:3px solid #da4453;
   margin-left:auto;
   margin-right:auto;
   border-radius:100px;
-  margin-top:22px;
+  margin-top:28px;
   background-image:url("../images/dave.jpg");
   background-repeat:no-repeat;
   background-position:center;
   background-size:cover;
+}
+.soc{
+  text-align:center;
+}
+.fa {
+  font-size: 26px;
+  padding-top:10px;
+  width:50px;
+  height:50px;
+  text-align: center;
+  text-decoration: none;
+  margin:12px;
+  border-radius:25px;
+}
+.soc a{
+  text-decoration: none;
+  border:2px solid #fff;
+  transition: 0.5s all;
+}
+.soc a:hover{
+   transform: rotateY(180deg);
+}
+.fa-facebook {
+  color:#fff;
+}
+
+.fa-twitter {
+  color: #fff;
+}
+.fa-linkedin {
+  color: #fff;
+}
+.fa-instagram {
+  color: #fff;
+}
+#last{
+  color:#000;
 }
