--- a/css/styles.css
+++ b/css/styles.css
@@ -14,9 +14,13 @@ body{
 }
 h4, h3, h2, p{
   color:#ffffff;
+  font-family: 'Nunito', sans-serif;
 }
 h3{
   margin-bottom:22px;
+}
+h1{
+  font-family: 'Righteous', cursive;
 }
 p{
   font-size:18px;
